--- a/.qoder/repowiki/zh/docs/specs/错误码规范.md
+++ b/.qoder/repowiki/zh/docs/specs/错误码规范.md
@@ -1,9 +1,20 @@
+---
+spec_type: 错误码规范
+version: v1.0
+scope: 电商主系统（SS = 10）
+status: active
+created_at: 2026-02-04
+updated_at: 2026-02-04
+author: 架构组
+---
+
 # 电商系统异常状态码规范（SSMMTNNN）
 
-## 版本
-v1.0  
-最后更新：2026-02-04  
-适用系统：电商主系统（SS = 10）
+## 版本信息
+
+- 版本: v1.0
+- 最后更新: 2026-02-04
+- 适用系统: 电商主系统（SS = 10）
 
 ## 📌 一、编码结构
 
